<resources>
    <string name="app_name">Diploma</string>
    <string name="homeFragment">Главная</string>
    <string name="my_orders">Мои заказы</string>
    <string name="support_chat">Поддержка</string>
    <string name="profile">Профиль</string>
    <string name="txtTimeFood">Время вкусной и полезной еды</string>
    <string name="text_for_you">Специально для тебя:</string>
    <string name="free_bonus">500</string>
    <string name="bonus">бонусов</string>
    <string name="txtMenu">Меню</string>
    <string name="on_choice">на выбор</string>
    <string name="choice_count_receptions">Выберите количество приемов:</string>
    <string name="_3">3 блюда</string>
    <string name="_4">4 блюда</string>
    <string name="choice_interval">Выберите интервал</string>
    <string name="order">ЗАКАЗАТЬ</string>
    <string name="msg_repeat">Повторим?❤️</string>
    <string name="has_something_happened">Что-то случилось?💔</string>
    <string name="your_data_is_safe">Твои данные в безопасности🔐</string>
    <string name="str_personal">Твой персонаж</string>
    <string name="txtDeliciousWithDeliveryStr">Вкусная еда с доставкой</string>
    <string name="save_time">Сохрани свое время для чего-то более важного</string>
    <string name="write_to_us">Напиши нам, мы обязательно разберемся</string>
    <string name="robo">РОБО</string>
    <string name="ninja">НИНДЗЯ</string>
    <string name="address_delivery">Адрес доставки:</string>
    <string name="str_change">ИЗМЕНИТЬ</string>
    <string name="your_chance">Твой выбор</string>
    <string name="enter_number">Введите номер телефона</string>
    <string name="name_app_1">FAST</string>
    <string name="name_app_2">FEAST</string>
    <string name="send_the_code">Отправить код</string>
    <string name="check_code">Проверить код</string>
    <string name="bt_1">1</string>
    <string name="bt_2">2</string>
    <string name="bt_3">3</string>
    <string name="bt_0">0</string>
    <string name="bt_9">9</string>
    <string name="bt_8">8</string>
    <string name="bt_7">7</string>
    <string name="bt_5">5</string>
    <string name="bt_4">4</string>
    <string name="bt_6">6</string>
    <string name="bt_plus">+</string>
    <string name="enter">ВОЙТИ</string>

</resources>